--- a/src/css/blog/_Paragraph1.scss
+++ b/src/css/blog/_Paragraph1.scss
@@ -18,6 +18,10 @@
     position: relative;
     padding: 2rem;
     grid-area: 1/1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     #q-left {
       position: absolute;
