--- a/src/css/blog/_utilities.scss
+++ b/src/css/blog/_utilities.scss
@@ -1,13 +1,13 @@
-@mixin button($importance){
+@mixin button($importance) {
   width: 200px;
   height: 70px;
   font-size: 1.3rem;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   cursor: pointer;
   outline: none;
   border: none;
-  
-  @if($importance == high){
+
+  @if ($importance == high) {
     background: #f6d342;
     color: #fff;
     &:hover {
@@ -17,16 +17,14 @@
     &:focus {
       box-shadow: 0 0 0 0;
     }
-  }@else{
+  } @else {
     background: #fff;
     color: #f6d342;
     &:hover {
-      // box-shadow: -5px 5px 50px 1px $orange;
-      box-shadow: 2px 2px 10px 2px  rgba(117, 117, 117, 0.808);
+      box-shadow: 2px 2px 50px 2px #f6d342;
     }
     &:focus {
       box-shadow: 0 0 0 0;
     }
-            
-   }
+  }
 }
