Removed red border from article elements

--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   flex-wrap: wrap-reverse;
   overflow: hidden;
-  border: 2px solid red;
+  // border: 2px solid red;
 
   &__body {
     display: flex;
