Created the sign in page with clip-path animation

--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -537,6 +537,66 @@
       border-radius: 5px;
       box-shadow: 1px 2px 10px 1px #bbbbbb; }
 
+.register {
+  width: 100vw;
+  height: 550px;
+  display: flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: linear-gradient(to right, #0689c4, #159dc6); }
+  .register__pic {
+    width: 50%;
+    height: inherit;
+    position: relative;
+    background-image: url("../../pics/Counselling.jpg");
+    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%);
+    animation: shapeChange 10s ease forwards 1s infinite; }
+    .register__pic img {
+      width: 400px;
+      height: 400px; }
+  .register__signIn {
+    width: 50%;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .register__signIn__header {
+      font-size: 1.5rem;
+      padding: 1rem; }
+    .register__signIn form {
+      width: 400px;
+      height: 400px;
+      padding: 2rem; }
+      .register__signIn form label {
+        font-size: 1.4rem;
+        margin: 10px 0 10px 0; }
+      .register__signIn form input {
+        width: 300px;
+        height: 70px;
+        padding: 1rem;
+        border: none;
+        border-bottom: 2px solid #f6d342;
+        margin: 10px 0 10px 0;
+        transition: all ease 1s;
+        outline: none; }
+        .register__signIn form input:focus {
+          border-bottom: 2px solid #0689c4; }
+      .register__signIn form button {
+        width: 150px;
+        height: 70px;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        margin: 20px 0 10px 0;
+        border-radius: 5px;
+        background: linear-gradient(to right, #0689c4, #663399);
+        transition: all ease 1s; }
+        .register__signIn form button:hover {
+          background: linear-gradient(to top, #663399, #0689c4); }
+
 .footer {
   width: 100vw;
   height: 400px;
@@ -692,3 +752,22 @@ body {
   100% {
     top: 10px;
     transform: rotate(360deg); } }
+
+@keyframes shapeChange {
+  0%,
+  10% {
+    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%); }
+  15%,
+  30% {
+    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 0%); }
+  35%,
+  50% {
+    clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%); }
+  55%,
+  70% {
+    clip-path: polygon(50% 100%, 100% 50%, 100% 100%, 0% 0%); }
+  75%,
+  90% {
+    clip-path: polygon(50% 1100%, 100% 0%, 100% 10%, 0% 0%); }
+  100% {
+    clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%); } }
