--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -164,25 +164,31 @@ body {
   0%,
   10% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%);
+    border: 3px solid red;
   }
   15%,
   30% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 0%);
+    border: 3px solid #663399;
   }
   35%,
   50% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
+    border: 3px solid #ffd700;
   }
 
   55%,
   70% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 100%, 0% 0%);
+    border: 3px solid #663399;
   }
   75%,
   90% {
     clip-path: polygon(50% 1100%, 100% 00%, 100% 10%, 0% 0%);
+    border: 3px solid #4169e1;
   }
   100% {
     clip-path: polygon(50% 100%, 100% 50%, 100% 50%, 10% 100%);
+    border: 3px solid violet;
   }
 }
