--- a/src/css/blog/Articlespage/_articlePage__body.scss
+++ b/src/css/blog/Articlespage/_articlePage__body.scss
@@ -5,24 +5,85 @@
   display: flex;
   margin: auto auto;
   flex-direction: column;
-  flex-wrap: wrap-reverse;
   overflow: hidden;
-  border: 2px solid red;
+
+  &__con{
+    width: 90vw;
+    height: fit-content;
+    padding: 1rem;
+    display: flex;
+    margin: auto auto;
+    flex-direction: column;
+    overflow: hidden;
+    overflow-x: scroll;
+     
+  }
+
+  &__header {
+    width: inherit;
+    position: relative;
+    
+  }
 
   &__body {
     display: flex;
+    width: fit-content;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding: 1rem;
 
-    .item {
-      width: 200px;
-      height: 250px;
-      padding: 1rem;
-      margin: 10px;
-      border-radius: 5px;
+    &__wholeItem {
+      grid-template-columns: 2fr;
+      grid-template-rows: repeat(2, 1fr);
+      width: fit-content;
+      height: fit-content;
       box-shadow: 1px 2px 10px 1px rgb(187, 187, 187);
-      //   border: 1px solid green;
+      height: 250px;
+      width: 200px;
+      margin: 0 10px;
+      overflow: hidden;
+      position: relative;
+      border-radius: 5px;
+      
+
+      &__item {
+        grid-area: 1/1;
+        margin: 10px;
+        height: inherit;
+        width: inherit;
+        background: url("../../pics/Counselling.jpg");
+        color: #fff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: blur(2px);
+        
+        &__description {
+          grid-area: 2/1;
+          position: absolute;
+          height: fit-content;
+          padding: 1rem;
+          color: #fff;
+          z-index: 2000;
+        }
+      }
     }
+    &__wholeItem:nth-last-of-type(even) {
+      background: royalblue;
+    }
+
+    &__wholeItem:nth-last-of-type(odd) {
+      background: gold;
+    }
+  }
+
+  &__slider {
+    // border: 5px solid cyan;
+    height: fit-content;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    
   }
 }
