--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -521,21 +521,65 @@
   display: flex;
   margin: auto auto;
   flex-direction: column;
-  flex-wrap: wrap-reverse;
-  overflow: hidden;
-  border: 2px solid red; }
+  overflow: hidden; }
+  .trending__con {
+    width: 90vw;
+    height: fit-content;
+    padding: 1rem;
+    display: flex;
+    margin: auto auto;
+    flex-direction: column;
+    overflow: hidden;
+    overflow-x: scroll; }
+  .trending__header {
+    width: inherit;
+    position: relative; }
   .trending__body {
     display: flex;
+    width: fit-content;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     padding: 1rem; }
-    .trending__body .item {
-      width: 200px;
+    .trending__body__wholeItem {
+      grid-template-columns: 2fr;
+      grid-template-rows: repeat(2, 1fr);
+      width: fit-content;
+      height: fit-content;
+      box-shadow: 1px 2px 10px 1px #bbbbbb;
       height: 250px;
-      padding: 1rem;
-      margin: 10px;
-      border-radius: 5px;
-      box-shadow: 1px 2px 10px 1px #bbbbbb; }
+      width: 200px;
+      margin: 0 10px;
+      overflow: hidden;
+      position: relative;
+      border-radius: 5px; }
+      .trending__body__wholeItem__item {
+        grid-area: 1/1;
+        margin: 10px;
+        height: inherit;
+        width: inherit;
+        background: url("../../pics/Counselling.jpg");
+        color: #fff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: blur(2px); }
+        .trending__body__wholeItem__item__description {
+          grid-area: 2/1;
+          position: absolute;
+          height: fit-content;
+          padding: 1rem;
+          color: #fff;
+          z-index: 2000; }
+    .trending__body__wholeItem:nth-last-of-type(even) {
+      background: royalblue; }
+    .trending__body__wholeItem:nth-last-of-type(odd) {
+      background: gold; }
+  .trending__slider {
+    height: fit-content;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap; }
 
 .footer {
   width: 100vw;
