--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -7,8 +7,12 @@
   grid-template-rows: repeat(3, 1fr);
   text-align: center;
 
-  .h2 {
+  &__firstChild{
     grid-area: 1/1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .h2 {
     margin: 150px 0vh 0px 150px;
     color: orange;
     width: 360px;
@@ -19,7 +23,7 @@
     position: relative;
     top: 100px;
     @include border;
-
+    
     & > .h2_1 {
       font-size: 2rem;
       font-weight: 100;
@@ -32,14 +36,14 @@
   }
   p {
     @include border;
-    width: 40vw;
+    width: 500px;
     height: 200px;
-    margin: 10vh 40px;
+    margin: 10% 10%;
     font-size: 15px;
     padding: 2rem;
     grid-area: 2/1;
   }
-
+  
   &__art {
     width: 50vw;
     height: 400px;
@@ -50,7 +54,7 @@
     flex-direction: row;
     @include border;
   }
-
+  
   .buttons {
     display: flex;
     flex-direction: row;
@@ -63,4 +67,5 @@
     border-radius: 1rem;
     flex-wrap: wrap-reverse;
   }
+}
 }
