--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -219,49 +219,53 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   text-align: center; }
-  .articles .h2 {
+  .articles__firstChild {
     grid-area: 1/1;
-    margin: 150px 0vh 0px 150px;
-    color: orange;
-    width: 360px;
-    height: fit-content;
-    padding: 1rem;
-    word-wrap: wrap;
-    text-align: center;
-    position: relative;
-    top: 100px; }
-    .articles .h2 > .h2_1 {
-      font-size: 2rem;
-      font-weight: 100;
-      color: orange; }
-    .articles .h2 > .h2_2 {
-      font-size: 5rem; }
-  .articles p {
-    width: 40vw;
-    height: 200px;
-    margin: 10vh 40px;
-    font-size: 15px;
-    padding: 2rem;
-    grid-area: 2/1; }
-  .articles__art {
-    width: 50vw;
-    height: 400px;
-    position: relative;
-    top: 40vh;
-    right: 200px;
     display: flex;
-    flex-direction: row; }
-  .articles .buttons {
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    width: 400px;
-    height: 30vh;
-    justify-content: center;
-    padding: 1rem;
-    margin-top: 20px;
-    border-radius: 1rem;
-    flex-wrap: wrap-reverse; }
+    flex-direction: column;
+    justify-content: center; }
+    .articles__firstChild .h2 {
+      margin: 150px 0vh 0px 150px;
+      color: orange;
+      width: 360px;
+      height: fit-content;
+      padding: 1rem;
+      word-wrap: wrap;
+      text-align: center;
+      position: relative;
+      top: 100px; }
+      .articles__firstChild .h2 > .h2_1 {
+        font-size: 2rem;
+        font-weight: 100;
+        color: orange; }
+      .articles__firstChild .h2 > .h2_2 {
+        font-size: 5rem; }
+    .articles__firstChild p {
+      width: 500px;
+      height: 200px;
+      margin: 10% 10%;
+      font-size: 15px;
+      padding: 2rem;
+      grid-area: 2/1; }
+    .articles__firstChild__art {
+      width: 50vw;
+      height: 400px;
+      position: relative;
+      top: 40vh;
+      right: 200px;
+      display: flex;
+      flex-direction: row; }
+    .articles__firstChild .buttons {
+      display: flex;
+      flex-direction: row;
+      text-align: left;
+      width: 400px;
+      height: 30vh;
+      justify-content: center;
+      padding: 1rem;
+      margin-top: 20px;
+      border-radius: 1rem;
+      flex-wrap: wrap-reverse; }
 
 .shopping {
   background: #23343a;
