--- a/src/css/blog/Homepage/_articles.scss
+++ b/src/css/blog/Homepage/_articles.scss
@@ -7,65 +7,68 @@
   grid-template-rows: repeat(3, 1fr);
   text-align: center;
 
-  &__firstChild{
+  &__firstChild {
     grid-area: 1/1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     .h2 {
-    margin: 150px 0vh 0px 150px;
-    color: orange;
-    width: 360px;
-    height: fit-content;
-    padding: 1rem;
-    word-wrap: wrap;
-    text-align: center;
-    position: relative;
-    top: 100px;
-    @include border;
-    
-    & > .h2_1 {
-      font-size: 2rem;
-      font-weight: 100;
+      margin: 150px 0vh 0px 150px;
       color: orange;
+      width: 360px;
+      height: fit-content;
+      padding: 1rem;
+      word-wrap: wrap;
+      text-align: center;
+      position: relative;
+      top: 100px;
+      @include border;
+
+      & > .h2_1 {
+        font-size: 2rem;
+        font-weight: 100;
+        color: orange;
+      }
+
+      & > .h2_2 {
+        font-size: 5rem;
+      }
+    }
+    p {
+      @include border;
+      width: 500px;
+      height: 200px;
+      margin: 10% 10%;
+      font-size: 15px;
+      padding: 2rem;
+      grid-area: 2/1;
     }
 
-    & > .h2_2 {
-      font-size: 5rem;
+    &__art {
+      width: 50vw;
+      height: 400px;
+      position: relative;
+      display: flex;
+      @include border;
+    }
+
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      text-align: left;
+      width: 400px;
+      height: 30vh;
+      justify-content: center;
+      padding: 1rem;
+      margin-top: 20px;
+      border-radius: 1rem;
+      flex-wrap: wrap-reverse;
     }
   }
-  p {
-    @include border;
-    width: 500px;
-    height: 200px;
-    margin: 10% 10%;
-    font-size: 15px;
-    padding: 2rem;
-    grid-area: 2/1;
-  }
-  
-  &__art {
-    width: 50vw;
-    height: 400px;
-    position: relative;
-    top: 40vh;
-    right: 200px;
+  &__pic{
+    grid-area: 1/2;
     display: flex;
-    flex-direction: row;
-    @include border;
+    
+    @include flexCon(row, true, center);
   }
-  
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    width: 400px;
-    height: 30vh;
-    justify-content: center;
-    padding: 1rem;
-    margin-top: 20px;
-    border-radius: 1rem;
-    flex-wrap: wrap-reverse;
-  }
-}
 }
