--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -251,10 +251,7 @@
       width: 50vw;
       height: 400px;
       position: relative;
-      top: 40vh;
-      right: 200px;
-      display: flex;
-      flex-direction: row; }
+      display: flex; }
     .articles__firstChild .buttons {
       display: flex;
       flex-direction: row;
@@ -266,6 +263,13 @@
       margin-top: 20px;
       border-radius: 1rem;
       flex-wrap: wrap-reverse; }
+  .articles__pic {
+    grid-area: 1/2;
+    display: flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
 
 .shopping {
   background: #23343a;
