--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -529,7 +529,6 @@
   display: flex;
   margin: auto auto;
   flex-direction: column;
-<<<<<<< HEAD
   overflow: hidden; }
   .trending__con {
     width: 90vw;
@@ -543,10 +542,6 @@
   .trending__header {
     width: inherit;
     position: relative; }
-=======
-  flex-wrap: wrap-reverse;
-  overflow: hidden; }
->>>>>>> 3bca3ca097b84f40a45acf7e57898cbcc61b2fc8
   .trending__body {
     display: flex;
     width: fit-content;
@@ -644,7 +639,8 @@
   box-sizing: border-box; }
 
 body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+ "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   overflow-x: hidden; }
   body .move-right {
     animation: moveRight 1s ease forwards infinite; }
